fixing footer alignment

--- a/style.css
+++ b/style.css
@@ -698,7 +698,6 @@ footer .footerContent {
   width: 100%;
   max-width: 1312px;
   padding: 0 64px;
-  box-sizing: border-box; 
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   footer .footerContent {
